tests/for_in.err.out
error: for_in.err.li 1,10: `int` is not iterable
    1 | for i in 10 {
      |          ^^
error: for_in.err.li 5,3: `continue` is not in a loop
    5 |   continue
      |   ^^^^^^^^
